- External projects (including make.project) can use the makefile variable LINKCXXSCIPALL or LINKCCSCIPALL to link all SCIP libraries.
- Running "make help" lists all makefile options.
- All makefiles in examples/ and applications/ are updated.
- The binaries now contain an rpath to the SCIP directory, such that shared libraries are found.


SCIP version 3.2.2
==================

features:
- for users of the ampl interface, the display/logfile option has been added to set the name of a
  file to write the SCIP log to (additionally to stdout)

fixed bugs:
- fixed bug in XML reader concerning comments
- fixed wrong representation of SOC constraints in NLP
- fixed possible segmentation fault in genvbounds propagator
- fixed bug with solutions from previous runs not satisfying an objective limit
- the AMPL interface now writes a solve status (solve_result_num) into the .sol file
- fix wrong propagation of product expressions
- fix memory leaks in TSP example
- return SCIP_ERROR when a memory exception is caught in SoPlex (was SCIP_LPERROR)
- in the cmpres.awk (allcmpres.sh) output, the counts in the time column are now with respect to the
  whole set of processed instances (as with fail and solv), while before it was with respect to the
  set of instances where no solver failed (eval set); thus, now proc = fail + time + solv.
- fixed memory leak in OSiL reader
- writing of solutions or parameters to a file now works also with the message handler set to quiet
- fixed bug in heur_octane with uninitialized ray direction
- fixed a few issues within redundant constraint detection of (specialized) linear constraint handlers
- SCIPisObjIntegral() now works correctly in SCIP_STAGE_PROBLEM
- ignore lower and upper bound tightenigs beyond +/-infinity during solving
- fix wrong NLP representation of logic or constraints in the dual value heuristic

performance improvements:
- improve propagation of absolute-value expression in the case that the sign of the argument is fixed
